--- a/src/main/webapp/WEB-INF/layout/logoutBt.jspf
+++ b/src/main/webapp/WEB-INF/layout/logoutBt.jspf
@@ -3,5 +3,5 @@
 <%-- Optional Logout button for authenticated users --%>
 
 <c:if test="${not empty pageContext.request.remoteUser}">
-    <a class="bg-danger" href="<c:url value="/Logout"/>">Desconectar ${pageContext.request.remoteUser}</a>
+    <a class="nav-link border border-danger text-danger" href="<c:url value="/Logout"/>">Desconectar ${pageContext.request.remoteUser}</a>
 </c:if>
