--- a/src/main/webapp/WEB-INF/layout/bootstrapheader.jspf
+++ b/src/main/webapp/WEB-INF/layout/bootstrapheader.jspf
@@ -1,7 +1,11 @@
 
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 
-<c:set var="bootstrapbase" value="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6"/>   
+<c:set var="bootstrapbase" value="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0"/>   
+<%--! webjar CSS/JS boostrap 4.0 dependencies --%>
+<c:url var="bootstrapbase" value="/webjars/bootstrap/4.0.0"/>   
+<c:url var="jquerybase" value="/webjars/jquery/3.0.0"/>   
+<c:url var="popperbase" value="/webjars/popper.js/1.11.1/dist/umd"/>   
 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,8 +13,7 @@
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="${bootstrapbase}/css/bootstrap.min.css" >
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="${bootstrapbase}/css/bootstrap-theme.min.css" >
-
 <!-- Latest compiled and minified JavaScript -->
+<script src="${jquerybase}/jquery.min.js"> </script>
+<script src="${popperbase}/popper.min.js"></script>
 <script src="${bootstrapbase}/js/bootstrap.min.js"> </script>
