Migration to JEE 8
- CDI bootstraping
- Glassfish datasources
- All JEE 8 Tomcat dependencies commented in pom.xml

--- a/src/main/webapp/WEB-INF/layout/header.jspf
+++ b/src/main/webapp/WEB-INF/layout/header.jspf
@@ -1,6 +1,7 @@
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <header class="container well">
     <h1 class="">
+        <%-- Application URL can be obtained with c:url tag or pageContext.request.contextPath EL var --%>
         <a href="<c:url value='/'/>"><img src="${pageContext.request.contextPath}/images/logo.png"></a>
            Club de Tenis
     </h1>
