--- a/src/main/webapp/WEB-INF/layout/footer.jspf
+++ b/src/main/webapp/WEB-INF/layout/footer.jspf
@@ -1,8 +1,9 @@
 <%-- any content can be specified here e.g.: --%>
 <%@page import="java.util.Date"%>
 <%@page pageEncoding="UTF-8" %>
+<jsp:useBean id="fecha_actual" class="java.util.Date" />
 <footer class="panel panel-default well">
     <div class="panel-body">
-    <%= new Date() %>
+        ${fecha_actual}
     <div>
 </footer>
